RESOLVED FIXED53865
REGRESSION: New drawing area is causing some WebProcess crashes in layout tests
https://bugs.webkit.org/show_bug.cgi?id=53865
Summary REGRESSION: New drawing area is causing some WebProcess crashes in layout tests
Maciej Stachowiak
Reported 2011-02-05 21:08:11 PST
REGRESSION: New drawing area is causing some WebProcess crashes in layout tests
Attachments
Patch (1.85 KB, patch)
2011-02-05 21:10 PST, Maciej Stachowiak
mitz: review+
Maciej Stachowiak
Comment 1 2011-02-05 21:10:10 PST
mitz
Comment 2 2011-02-05 21:12:31 PST
Comment on attachment 81386 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=81386&action=review > Source/WebKit2/ChangeLog:11 > + where this is called repeatedly without existing accelerated composting mode s/existing/exiting/ I presume
Maciej Stachowiak
Comment 3 2011-02-05 21:24:35 PST
Note You need to log in before you can comment on or make changes to this bug.