third_party/WebKit/Source/WebKit2/WebProcess/WebPage/DrawingAreaImpl.cpp
@@ -235,7 +235,8 @@ void DrawingAreaImpl::resumePainting()
 
 void DrawingAreaImpl::enterAcceleratedCompositingMode(GraphicsLayer* graphicsLayer)
 {
-    ASSERT(!m_layerTreeHost);
+    if (m_layerTreeHost)
+        m_layerTreeHost->invalidate();
 
     m_layerTreeHost = LayerTreeHost::create(m_webPage, graphicsLayer);
     
@@ -252,9 +253,11 @@ void DrawingAreaImpl::enterAcceleratedCompositingMode(GraphicsLayer* graphicsLay
 
 void DrawingAreaImpl::exitAcceleratedCompositingMode()
 {
-    m_layerTreeHost->invalidate();
-    m_layerTreeHost = nullptr;
-    
+    if (m_layerTreeHost) {
+        m_layerTreeHost->invalidate();
+        m_layerTreeHost = nullptr;
+    }
+
     if (m_inSetSize)
         return;
 
